// SPDX-FileCopyrightText: 2025 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/randgen
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.1\...v0.1.2[0.1.2] - 2025-03-22

=== Changed

* Change the buffer capacity ({pull-request-url}/14[#14])

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2025-03-11

=== Added

* Supports encoding the generated bytes as URL-safe base64
  ({pull-request-url}/7[#7])

=== Fixed

* Fix broken pipe error when piping ({pull-request-url}/5[#5])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-03-10

=== Added

* Initial release